# terminal-3d-render-engine

./: .clang-format  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  logs.txt
include/: constants.h  globals.h
include/core/: core.h  terminal.h  utils.h
include/engine/: mesh.h  pipeline.h
include/math/: utils.h
src/: globals.c  main.c
src/core/: terminal.c  utils.c
src/engine/: mesh.c  pipeline.c
src/math/: utils.c
